bk_ida/gccida/c1/emit_move_insn_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3278:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v5; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3279:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3280:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3294:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3333:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v61; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3346:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v74; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3348:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v76; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3374:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v24 = insn_data_0[insn_code].genfun( x, y); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3374:36: error: called object type '<dependent type>' is not a function or function pointer
v24 = insn_data_0[insn_code].genfun( x, y); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3379:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = mode_class_0[v2]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3382:58: error: called object type 'const enum mode_class [59]' is not a function or function pointer
v6 = mode_for_size( 8 * mode_unit_size[v2], ( mode_class)( 2 - ( v5 == MODE_COMPLEX_INT)), 0); 
                                            ~~~~~~~~~~~~~^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3390:25: error: use of undeclared identifier 'machine_mode'
if ( push_operand( x, ( machine_mode)*( ( unsigned __int8 *)x + 2)) ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3401:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v46 = insn_data_0[v43].genfun( v44, v45); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3401:30: error: called object type '<dependent type>' is not a function or function pointer
v46 = insn_data_0[v43].genfun( v44, v45); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3406:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v50 = insn_data_0[v47].genfun( v48, v49); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3406:30: error: called object type '<dependent type>' is not a function or function pointer
v50 = insn_data_0[v47].genfun( v48, v49); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3420:23: error: use of undeclared identifier 'machine_mode'
v60 = expand_binop( ( machine_mode)( v56 ^ 5), v57, v58, v59, global_rtl[2], 0, OPTAB_LIB_WIDEN); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3433:31: error: use of undeclared identifier 'machine_mode'
v70 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v67, v68, v69); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/expr.c:3450:40: error: called object type 'const enum mode_class [59]' is not a function or function pointer
v74 = mode_for_size( v51, ( mode_class)( ( v5 == MODE_COMPLEX_FLOAT) + 1), 1); 
                          ~~~~~~~~~~~~~^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_move_insn_1/src/obj/expr.o] Error 1
